--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-list",
+  "name": "kanban-app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
