--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apexcharts": "^4.4.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.7.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.54.2",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-helmet": "^6.1.11",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.1",
